custom from field

--- a/Practice_06/student/templates/student/login.html
+++ b/Practice_06/student/templates/student/login.html
@@ -10,5 +10,12 @@
     <form action="">
         {{form}}
     </form>
+
+    {% comment %} {% for field in form %}
+    <form action="">
+        {{field.label_tag}}
+        {{field}}
+    </form>
+    {% endfor %} {% endcomment %}
 </body>
 </html>
