--- a/Practice_10/student/templates/student/home.html
+++ b/Practice_10/student/templates/student/home.html
@@ -34,11 +34,172 @@
             </div>
         {% endif %}
     </div>
+
+    <div class="mb-3">
+        <label for="{{ form.gender.id_for_label }}" class="form-label">
+        {{ form.gender.label }}</label>
+        {{form.gender}}
+        {% if form.gender.errors %}
+            <div class="text-danger">
+                {% for error in form.gender.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.locality.id_for_label }}" class="form-label">
+        {{ form.locality.label }}</label>
+        {{form.locality}}
+        {% if form.locality.errors %}
+            <div class="text-danger">
+                {% for error in form.locality.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.city.id_for_label }}" class="form-label">
+        {{ form.city.label }}</label>
+        {{form.city}}
+        {% if form.city.errors %}
+            <div class="text-danger">
+                {% for error in form.city.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.pin.id_for_label }}" class="form-label">
+        {{ form.pin.label }}</label>
+        {{form.pin}}
+        {% if form.pin.errors %}
+            <div class="text-danger">
+                {% for error in form.pin.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.state.id_for_label }}" class="form-label">
+        {{ form.state.label }}</label>
+        {{form.state}}
+        {% if form.state.errors %}
+            <div class="text-danger">
+                {% for error in form.state.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.mobile.id_for_label }}" class="form-label">
+        {{ form.mobile.label }}</label>
+        {{form.mobile}}
+        {% if form.mobile.help_text %}
+            <div class="form-text">{{ form.mobile.help_text }}</div>
+        {% endif %}
+        {% if form.mobile.errors %}
+            <div class="text-danger">
+                {% for error in form.mobile.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.email.id_for_label }}" class="form-label">
+        {{ form.email.label }}</label>
+        {{form.email}}
+        {% if form.email.errors %}
+            <div class="text-danger">
+                {% for error in form.email.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.job_city.id_for_label }}" class="form-label">
+        {{ form.job_city.label }}</label>
+        {{form.job_city}}
+        {% if form.job_city.errors %}
+            <div class="text-danger">
+                {% for error in form.job_city.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.profile_img.id_for_label }}" class="form-label">
+        {{ form.profile_img.label }}</label>
+        {{form.profile_img}}
+        {% if form.profile_img.help_text %}
+            <div class="form-text">{{ form.profile_img.help_text}}</div>
+        {% endif %}
+        <div class="mt-3">
+            <img id="imagePreview" src="" alt="Image Preview"
+            style="display: none; max-width: 50%; height: auto;">
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <label for="{{ form.mv_file.id_for_label }}" class="form-label">
+        {{ form.mv_file.label }}</label>
+        {{form.mv_file}}
+        {% if form.mv_file.help_text %}
+            <div class="form-text">{{ form.mv_file.help_text}}</div>
+        {% endif %}
+        {% if form.mv_file.errors %}
+            <div class="text-danger">
+                {% for error in form.mv_file.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<script>
+    function imagePreview(event) {
+        const imagePreview = document.getElementById('imagePreview');
+        const file = event.target.files[0];
+
+        if(file) {
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                imagePreview.src = e.target.result;
+                imagePreview.style.display = 'black';
+            };
+            reader.readAsDataURL(file);
+        } else {
+            imagePreview.style.display = 'none'
+        }
+    }
+
+    document.querySelector("input[type='file']").addEventListener("change", previewImage)
+</script>
+
 {% endblock left-content %}
 
 {% block right-content %}
 <h4 class="text-center mb-3">
     <u>List of Candidate</u>
 </h4>
+{% for candidate in candidates %}
+<p>{{ candidate.id }}. <a href="{% url "candidate_detail" candidate.id %}">{{ candidate.name }}</a></p>
+{% endfor %}
 {% endblock right-content %}
