Sessions in django

--- a/Practice_14/student/templates/student/checktestcookie.html
+++ b/Practice_14/student/templates/student/checktestcookie.html
@@ -6,6 +6,7 @@
     <title>Session</title>
 </head>
 <body>
-    <h1>Check session...</h1>
+    <h1>Test Session Cookie...</h1>
+    {{request.session.test_cookie_worked}}
 </body>
 </html>
