Sessions in django

--- a/Practice_14/student/templates/student/getsession.html
+++ b/Practice_14/student/templates/student/getsession.html
@@ -6,6 +6,7 @@
     <title>Session</title>
 </head>
 <body>
-    <h1>Check session...</h1>
+    <h1>Session Get...</h1>
+    <h3>{{ first_name }} {{ last_name }}</h3>
 </body>
 </html>
