--- a/Practice_14/student/templates/student/sessionmethodsintemplate.html
+++ b/Practice_14/student/templates/student/sessionmethodsintemplate.html
@@ -6,6 +6,17 @@
     <title>Session</title>
 </head>
 <body>
-    <h1>Check session...</h1>
+    {% for key in keys %}
+        {{key}} <br>
+    {% endfor %}  <hr>
+
+    {% for key, value in items %}
+        {{key}}: {{value}} <br>
+    {% endfor %} <hr>
+
+    {{request.session.get_session_cookie_age}} <br>
+    {{request.session.get_expiry_age}} <br>
+    {{request.session.get_expiry_date}} <br>
+    {{request.session.get_expire_at_browser_close}} <br>
 </body>
 </html>
