Sessions in django

--- a/Practice_14/student/templates/student/sessionmethodsinview.html
+++ b/Practice_14/student/templates/student/sessionmethodsinview.html
@@ -6,6 +6,6 @@
     <title>Session</title>
 </head>
 <body>
-    <h1>Check session...</h1>
+    <h1>Check Termial for Sessions methods in Views...</h1>
 </body>
 </html>
