--- a/Practice_14/student/templates/student/settestcookie.html
+++ b/Practice_14/student/templates/student/settestcookie.html
@@ -6,6 +6,6 @@
     <title>Session</title>
 </head>
 <body>
-    <h1>Check session...</h1>
+    <h1>Set Test Session Cookie...</h1>
 </body>
 </html>
