Database Aggregate Function

--- a/Practice_22/school/templates/school/home.html
+++ b/Practice_22/school/templates/school/home.html
@@ -32,5 +32,19 @@
             </tr>
         {% endfor %} 
     </table>
+    <h3>Average Data {{average}}</h3>
+    <h3>Average {{average.marks__avg}}</h3> <hr>
+
+    <h3>Sum Data {{total}}</h3>
+    <h3>Sum {{total.marks__sum}}</h3> <hr>
+
+    <h3>Minimum Data {{minimum}}</h3>
+    <h3>Minimum {{minimum.marks__min}}</h3> <hr>
+
+    <h3>Maximum Data {{maximum}}</h3>
+    <h3>Maximum {{maximum.marks__max}}</h3> <hr>
+
+    <h3>Count Data {{totalcount}}</h3>
+    <h3>Count {{totalcount.marks__count}}</h3> <hr>
 </body>
 </html>
