--- a/Practice_40/core/templates/core/home.html
+++ b/Practice_40/core/templates/core/home.html
@@ -12,5 +12,17 @@
         <p>{{post.desc}}</p>
         <small>{{post.publish_date}}</small>
     {% endfor %}
+
+    <div>
+        <span>
+            {% if page_obj.has_previous %}
+            <a href="?page={{page_obj.previous_page_number}}">Previous</a>
+            {% endif %}
+            <span>Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
+            {% if page_obj.has_next %}
+            <a href="?page={{page_obj.next_page_number}}">Next</a>
+            {% endif %}
+        </span>
+    </div>
 </body>
 </html>
